<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OperMat01</string>
    <string name="str1">Ingrese el primer valor</string>
    <string name="str2">Ingrese el segundo valor</string>
    <string name="str3">Por Victor O.(24/03/2013)</string>
    <string name="strR">Resultado</string>
    <string name="menu_settings">Settings</string>
    
	<string name="strCmd1">Suma</string>
    <string name="strCmd2">Resta</string>
    <string name="strCmd3">Multiplic.</string>
	<string name="strCmd4">Division</string>
</resources>